# user-guide

./: .aspell.en.pws  .gitignore  .pre-commit-config.yaml  .travis.yml  .yaspeller.json  404.html  CNAME  CONTRIBUTING.md  Dockerfile  Gemfile  I18N.md  Makefile  OWNERS  OWNERS_ALIASES  README.adoc  README.md  Rakefile  SUMMARY.md  _coverpage.adoc  _coverpage.md  _distro_map.yml  _redirects  _sidebar.adoc  _sidebar.md  _topic_map.yml  access.md  additional-resources.adoc  additional-resources.md  architecture.md  assign-vm-node.md  authorization.md  changelog.md  chapter1.md  disks-and-volumes.md  docs-guidelines.md  feature-matrix.md  guest-os-info.md  index.adoc  index.html  installation.md  (+25 more)
_templates/: page.html.erb
administration/: annotations_and_labels.adoc  api-validation.adoc  authorization.adoc  device-plugins.adoc  image-upload.adoc  intro.adoc  live-migration.adoc  monitoring.adoc  node-eviction.adoc
appendix/: appendix.md  contributing.md
architecture/: index.html  virtual-machine.adoc
contributing/: index.html
creating-virtual-machines/: dedicated-cpu.adoc  disks-and-volumes.adoc  guest-operating-system-information.adoc  interfaces-and-networks.adoc  intro.adoc  presets.adoc  probes.adoc  run-strategies.adoc  startup-scripts.adoc  virtio-win.adoc  virtualized-hardware-configuration.adoc
creation/: cloud-init.md  creating-virtual-machines.md  dedicated-cpu.md  devices.md  disks-and-volumes.md  guest-operating-system-information.md  host-devices.md  interfaces-and-networks.md  presets.md  probes.md  run-strategies.md  virtio-win.md
docs/: .nav.yml  (+58 more)
(+557 files in other folders)
