[metadata]
version = 1.0.0
name = KubeVirt User Guide
summary = KubeVirt User Guide
description-file = README.md
license = GPL3
classifiers =
	Topic :: Utilities
author = The KubeVirt Community
author-email = privacy@kubevirt.io
home-page = https://github.com/kubevirt/kubevirt
package_data={   },
include_package_data=True,

[files]

[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package =

cover-erase = 1
verbosity = 2
